5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1684_1872.log
== TEST (2019-04-28 22:28:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	mensagem = Y

print("Eixo" ,mensagem,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    mensagem = Y
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:30:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
	mensagem = Y

print("Eixo" ,mensagem,)
-- ERROR:
File "XXXX", line 9
    mensagem = Y
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:30:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
		mensagem = Y

print("Eixo" ,mensagem,)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem,)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:31:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
		mensagem = Y

print("Eixo" ,mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:32:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
		mensagem = Y

print("Eixo" ,mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:32:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
		mensagem = Y

print("Eixo" ,mensagem, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem, )
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:59:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = X
else:
	if((y > 0) and (y < 0)):
		mensagem = Y

print("Eixo" ,mensagem, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem, )
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:00:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("digite x: "))
y = float(input("digite y: "))

if((x > 0) and (x < 0)):
	mensagem = "X"
else:
	if((y > 0) and (y < 0)):
		mensagem = "Y"

print("Eixo" ,mensagem, )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Eixo" ,mensagem, )
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
